FEAT: added the schemas, and database connection

--- a/user-service/pyproject.toml
+++ b/user-service/pyproject.toml
@@ -23,6 +23,7 @@ faker = "^33.0.0"
 pytest-asyncio = "^0.24.0"
 asyncpg = "^0.30.0"
 python-jose = "^3.3.0"
+contextvars = "^2.4"
 
 
 [build-system]
