--- a/user-service/.env.example
+++ b/user-service/.env.example
@@ -1,3 +1,6 @@
+# Database
+POSTGRES_URL=postgresql+asyncpg://postgres:password123@localhost:5432/user-service
+TEST_POSTGRES_URL=postgresql://postgres:password123@localhost:5431/user-service-test
 
 # JWT
 JWT_SECRET_KEY=SECRET-KEY
