--- a/user-service/pyproject.toml
+++ b/user-service/pyproject.toml
@@ -24,6 +24,7 @@ pytest-asyncio = "^0.24.0"
 asyncpg = "^0.30.0"
 python-jose = "^3.3.0"
 contextvars = "^2.4"
+pycountry = "^24.6.1"
 
 
 [build-system]
