--- a/user-service/docker-compose.yml
+++ b/user-service/docker-compose.yml
@@ -29,6 +29,25 @@ services:
       - user_service_network
     restart: always
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: adminpassword
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    networks:
+      - user_service_network
+    restart: always
+    depends_on:
+      - postgresql-user-service
+      - postgresql-user-service-test
+
 networks:
   user_service_network:
     driver: bridge
+
+volumes:
+  pgadmin_data:
