--- a/user-service/pyproject.toml
+++ b/user-service/pyproject.toml
@@ -25,6 +25,8 @@ asyncpg = "^0.30.0"
 python-jose = "^3.3.0"
 contextvars = "^2.4"
 pycountry = "^24.6.1"
+pydantic-extra-types = "^2.10.0"
+phonenumbers = "^8.13.50"
 
 
 [build-system]
